tests/paczka1/fuzzy1/68129641.err
Error in line 13: KIXKjSa S373 8,2
Error in line 14: bE8bzMGeAo4 S373 87,7
Error in line 15: KIXKjSa S912 16,4
Error in line 18: bE8bzMGeAo4 S912 44,9
Error in line 22: S373 A696 87,1
Error in line 32: KIXKjSa S373 32,7
Error in line 39: KIXKjSa A696 90,0
